noisy/noisyParser.py
# -*- coding: utf-8 -*-
# Generated from noisy.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class noisyParser (Parser):

    grammarFileName = 'noisy.g4'

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        '<INVALID>', "'Noise_'", "'('", "'):'", "'...'", "'e'",
        "'s'", "'r'", '<INVALID>', "'<-'", "'->'", '<INVALID>',
        '<INVALID>', "'\n'",
    ]

    symbolicNames = [
        '<INVALID>', '<INVALID>', '<INVALID>', '<INVALID>',
        '<INVALID>', '<INVALID>', '<INVALID>', 'RESPONDER',
        'SEP', 'LEFTWARDS', 'RIGHTWARDS', 'UPPER', 'LOWER',
        'EOL', 'WS',
    ]

    RULE_spec = 0
    RULE_name = 1
    RULE_subname = 2
    RULE_args = 3
    RULE_arg = 4
    RULE_predistributed = 5
    RULE_preline = 6
    RULE_body = 7
    RULE_bodyline = 8
    RULE_token = 9
    RULE_key = 10
    RULE_operation = 11
    RULE_direction = 12

    ruleNames = [
        'spec', 'name', 'subname', 'args', 'arg', 'predistributed',
        'preline', 'body', 'bodyline', 'token', 'key', 'operation',
        'direction',
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    RESPONDER = 7
    SEP = 8
    LEFTWARDS = 9
    RIGHTWARDS = 10
    UPPER = 11
    LOWER = 12
    EOL = 13
    WS = 14

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion('4.7.1')
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache,
        )
        self._predicates = None

    class SpecContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(noisyParser.NameContext, 0)

        def body(self):
            return self.getTypedRuleContext(noisyParser.BodyContext, 0)

        def predistributed(self):
            return self.getTypedRuleContext(noisyParser.PredistributedContext, 0)

        def getRuleIndex(self):
            return noisyParser.RULE_spec

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterSpec'):
                listener.enterSpec(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitSpec'):
                listener.exitSpec(self)

    def spec(self):

        localctx = noisyParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.name()
            self.state = 28
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                self.state = 27
                self.predistributed()

            self.state = 30
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subname(self):
            return self.getTypedRuleContext(noisyParser.SubnameContext, 0)

        def EOL(self):
            return self.getToken(noisyParser.EOL, 0)

        def args(self):
            return self.getTypedRuleContext(noisyParser.ArgsContext, 0)

        def WS(self):
            return self.getToken(noisyParser.WS, 0)

        def getRuleIndex(self):
            return noisyParser.RULE_name

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterName'):
                listener.enterName(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitName'):
                listener.exitName(self)

    def name(self):

        localctx = noisyParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_name)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(noisyParser.T__0)
            self.state = 33
            self.subname()
            self.state = 34
            self.match(noisyParser.T__1)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << noisyParser.T__4) | (1 << noisyParser.T__5) | (1 << noisyParser.RESPONDER))) != 0):
                self.state = 35
                self.args()

            self.state = 38
            self.match(noisyParser.T__2)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == noisyParser.WS:
                self.state = 39
                self.match(noisyParser.WS)

            self.state = 42
            self.match(noisyParser.EOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubnameContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPPER(self, i: int=None):
            if i is None:
                return self.getTokens(noisyParser.UPPER)
            else:
                return self.getToken(noisyParser.UPPER, i)

        def LOWER(self, i: int=None):
            if i is None:
                return self.getTokens(noisyParser.LOWER)
            else:
                return self.getToken(noisyParser.LOWER, i)

        def getRuleIndex(self):
            return noisyParser.RULE_subname

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterSubname'):
                listener.enterSubname(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitSubname'):
                listener.exitSubname(self)

    def subname(self):

        localctx = noisyParser.SubnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_subname)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                _la = self._input.LA(1)
                if not(_la == noisyParser.UPPER or _la == noisyParser.LOWER):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == noisyParser.UPPER or _la == noisyParser.LOWER):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i: int=None):
            if i is None:
                return self.getTypedRuleContexts(noisyParser.ArgContext)
            else:
                return self.getTypedRuleContext(noisyParser.ArgContext, i)

        def SEP(self, i: int=None):
            if i is None:
                return self.getTokens(noisyParser.SEP)
            else:
                return self.getToken(noisyParser.SEP, i)

        def getRuleIndex(self):
            return noisyParser.RULE_args

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterArgs'):
                listener.enterArgs(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitArgs'):
                listener.exitArgs(self)

    def args(self):

        localctx = noisyParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_args)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.arg()
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == noisyParser.SEP:
                self.state = 50
                self.match(noisyParser.SEP)
                self.state = 51
                self.arg()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key(self):
            return self.getTypedRuleContext(noisyParser.KeyContext, 0)

        def RESPONDER(self):
            return self.getToken(noisyParser.RESPONDER, 0)

        def getRuleIndex(self):
            return noisyParser.RULE_arg

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterArg'):
                listener.enterArg(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitArg'):
                listener.exitArg(self)

    def arg(self):

        localctx = noisyParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arg)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == noisyParser.RESPONDER:
                self.state = 57
                self.match(noisyParser.RESPONDER)

            self.state = 60
            self.key()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PredistributedContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def preline(self, i: int=None):
            if i is None:
                return self.getTypedRuleContexts(noisyParser.PrelineContext)
            else:
                return self.getTypedRuleContext(noisyParser.PrelineContext, i)

        def EOL(self, i: int=None):
            if i is None:
                return self.getTokens(noisyParser.EOL)
            else:
                return self.getToken(noisyParser.EOL, i)

        def WS(self, i: int=None):
            if i is None:
                return self.getTokens(noisyParser.WS)
            else:
                return self.getToken(noisyParser.WS, i)

        def getRuleIndex(self):
            return noisyParser.RULE_predistributed

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterPredistributed'):
                listener.enterPredistributed(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitPredistributed'):
                listener.exitPredistributed(self)

    def predistributed(self):

        localctx = noisyParser.PredistributedContext(
            self, self._ctx, self.state,
        )
        self.enterRule(localctx, 10, self.RULE_predistributed)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.preline()
            self.state = 63
            self.match(noisyParser.EOL)
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
            if la_ == 1:
                self.state = 64
                self.preline()
                self.state = 65
                self.match(noisyParser.EOL)

            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == noisyParser.WS:
                self.state = 69
                self.match(noisyParser.WS)

            self.state = 72
            self.match(noisyParser.T__3)

            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == noisyParser.WS:
                self.state = 73
                self.match(noisyParser.WS)

            self.state = 76
            self.match(noisyParser.EOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrelineContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def direction(self):
            return self.getTypedRuleContext(noisyParser.DirectionContext, 0)

        def key(self, i: int=None):
            if i is None:
                return self.getTypedRuleContexts(noisyParser.KeyContext)
            else:
                return self.getTypedRuleContext(noisyParser.KeyContext, i)

        def WS(self, i: int=None):
            if i is None:
                return self.getTokens(noisyParser.WS)
            else:
                return self.getToken(noisyParser.WS, i)

        def SEP(self, i: int=None):
            if i is None:
                return self.getTokens(noisyParser.SEP)
            else:
                return self.getToken(noisyParser.SEP, i)

        def getRuleIndex(self):
            return noisyParser.RULE_preline

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterPreline'):
                listener.enterPreline(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitPreline'):
                listener.exitPreline(self)

    def preline(self):

        localctx = noisyParser.PrelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_preline)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == noisyParser.WS:
                self.state = 78
                self.match(noisyParser.WS)

            self.state = 81
            self.direction()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == noisyParser.WS:
                self.state = 82
                self.match(noisyParser.WS)

            self.state = 85
            self.key()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == noisyParser.SEP:
                self.state = 86
                self.match(noisyParser.SEP)
                self.state = 87
                self.key()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bodyline(self, i: int=None):
            if i is None:
                return self.getTypedRuleContexts(noisyParser.BodylineContext)
            else:
                return self.getTypedRuleContext(noisyParser.BodylineContext, i)

        def EOL(self, i: int=None):
            if i is None:
                return self.getTokens(noisyParser.EOL)
            else:
                return self.getToken(noisyParser.EOL, i)

        def getRuleIndex(self):
            return noisyParser.RULE_body

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterBody'):
                listener.enterBody(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitBody'):
                listener.exitBody(self)

    def body(self):

        localctx = noisyParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_body)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 93
                self.bodyline()
                self.state = 94
                self.match(noisyParser.EOL)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << noisyParser.LEFTWARDS) | (1 << noisyParser.RIGHTWARDS) | (1 << noisyParser.WS))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodylineContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def direction(self):
            return self.getTypedRuleContext(noisyParser.DirectionContext, 0)

        def token(self, i: int=None):
            if i is None:
                return self.getTypedRuleContexts(noisyParser.TokenContext)
            else:
                return self.getTypedRuleContext(noisyParser.TokenContext, i)

        def WS(self, i: int=None):
            if i is None:
                return self.getTokens(noisyParser.WS)
            else:
                return self.getToken(noisyParser.WS, i)

        def SEP(self, i: int=None):
            if i is None:
                return self.getTokens(noisyParser.SEP)
            else:
                return self.getToken(noisyParser.SEP, i)

        def getRuleIndex(self):
            return noisyParser.RULE_bodyline

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterBodyline'):
                listener.enterBodyline(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitBodyline'):
                listener.exitBodyline(self)

    def bodyline(self):

        localctx = noisyParser.BodylineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bodyline)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == noisyParser.WS:
                self.state = 100
                self.match(noisyParser.WS)

            self.state = 103
            self.direction()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == noisyParser.WS:
                self.state = 104
                self.match(noisyParser.WS)

            self.state = 107
            self.token()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == noisyParser.SEP:
                self.state = 108
                self.match(noisyParser.SEP)
                self.state = 109
                self.token()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TokenContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key(self):
            return self.getTypedRuleContext(noisyParser.KeyContext, 0)

        def operation(self):
            return self.getTypedRuleContext(noisyParser.OperationContext, 0)

        def getRuleIndex(self):
            return noisyParser.RULE_token

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterToken'):
                listener.enterToken(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitToken'):
                listener.exitToken(self)

    def token(self):

        localctx = noisyParser.TokenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_token)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 16, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.key()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.operation()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class KeyContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return noisyParser.RULE_key

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterKey'):
                listener.enterKey(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitKey'):
                listener.exitKey(self)

    def key(self):

        localctx = noisyParser.KeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_key)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            _la = self._input.LA(1)
            if not(_la == noisyParser.T__4 or _la == noisyParser.T__5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperationContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key(self, i: int=None):
            if i is None:
                return self.getTypedRuleContexts(noisyParser.KeyContext)
            else:
                return self.getTypedRuleContext(noisyParser.KeyContext, i)

        def getRuleIndex(self):
            return noisyParser.RULE_operation

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterOperation'):
                listener.enterOperation(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitOperation'):
                listener.exitOperation(self)

    def operation(self):

        localctx = noisyParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_operation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.key()
            self.state = 122
            self.key()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DirectionContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext=None, invokingState: int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFTWARDS(self):
            return self.getToken(noisyParser.LEFTWARDS, 0)

        def RIGHTWARDS(self):
            return self.getToken(noisyParser.RIGHTWARDS, 0)

        def getRuleIndex(self):
            return noisyParser.RULE_direction

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'enterDirection'):
                listener.enterDirection(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, 'exitDirection'):
                listener.exitDirection(self)

    def direction(self):

        localctx = noisyParser.DirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_direction)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not(_la == noisyParser.LEFTWARDS or _la == noisyParser.RIGHTWARDS):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
